ISS-11-17-49 - Fixed Spacing below Main Hero Box

--- a/styles/how-to-use-strensiq.css
+++ b/styles/how-to-use-strensiq.css
@@ -729,7 +729,7 @@
 		letter-spacing: 0.28px;
 		color: #FFFFFF;
 		text-transform: uppercase;
-		margin-top: 6.5rem;
+		margin-top: 5.5rem;
 		opacity: 1;
 		left: 0;
 		position: relative;
